# mcp-client

./: .gitignore  ENHANCEMENTS.md  FIX_SUMMARY.md  README.md  check_syntax.py  cli.py  http_client.py  mock_server.py  protocol.py  pyproject.toml  requirements.txt  setup.sh  sse_client.py  start_agent.py  test_components.py  test_enhanced_agent.py  test_fixes.py  test_mcp_endpoints.py  test_opensearch_json.py  test_tool_direct.py  transport.py  verify_fix.py  websocket_client.py
docs/: ARCHITECTURE.md  COMMAND_STRUCTURE.md  CRITICAL_FIXES.md  RESTRUCTURING_COMPLETE.md
examples/: README.md  debug_sse.py
llm_agent/: __init__.py  cli_agent.py  config.py  mcp_orchestrator.py
src/mcp_client/: __init__.py  agent.py  basic_client.py  cli.py  cli_agent.py  cli_minimal.py  client.py  config.py  enhanced_basic_client.py  enhanced_llm.py  exceptions.py  llm.py  orchestrator.py  transport.py
src/mcp_client/core/: __init__.py  protocol.py
src/mcp_client/plugins/: __init__.py
src/mcp_client/providers/: __init__.py
src/mcp_client/transports/: __init__.py  http.py  jsonrpc.py  sse.py  stdio.py
tests/: conftest.py  test_imports.py  test_sse.py
